--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+:root {
+    --bg-color-white: #f2f3f7;
+    --bg-color-dark: #283345;
+ }
+
+
 *, *::before, *::after{
     box-sizing: border-box;
     padding: 0;
